[gd_scene load_steps=6 format=2]

[ext_resource path="res://OptionButton.gd" type="Script" id=1]
[ext_resource path="res://PersonalityQuestions.gd" type="Script" id=2]
[ext_resource path="res://tempSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/imageedit_8_9964836039-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://questionaire.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer"]
margin_right = 998.0
margin_bottom = 1780.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 998.0
margin_bottom = 14.0
text = "Forward Questionnaire"
align = 1

[node name="PersonalQuestions" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 998.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions"]
margin_right = 998.0
margin_bottom = 42.0

[node name="Question1" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Name"]
margin_right = 998.0
margin_bottom = 14.0
text = "Please Enter Your Name"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Name"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 42.0
max_length = 50
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pronouns" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions"]
margin_top = 46.0
margin_right = 998.0
margin_bottom = 84.0

[node name="Question2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Pronouns"]
margin_right = 998.0
margin_bottom = 14.0
text = "Please Select Your Pronouns"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Pronouns"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 38.0
text = "Item 0"
script = ExtResource( 1 )

[node name="OtherOption" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Pronouns"]
visible = false
margin_top = 42.0
margin_right = 740.0
margin_bottom = 66.0
size_flags_vertical = 3

[node name="subject" type="LineEdit" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Pronouns/OtherOption"]
margin_right = 244.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 20
placeholder_text = "Subject Pronoun"
caret_blink = true
caret_blink_speed = 0.5

[node name="object" type="LineEdit" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Pronouns/OtherOption"]
margin_left = 248.0
margin_right = 492.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 20
placeholder_text = "Object Pronoun"
caret_blink = true
caret_blink_speed = 0.5

[node name="posessive" type="LineEdit" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalQuestions/Pronouns/OtherOption"]
margin_left = 496.0
margin_right = 740.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 20
placeholder_text = "Posessive Pronoun"
caret_blink = true
caret_blink_speed = 0.5

[node name="PersonalityQuestions" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 998.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions"]
margin_right = 998.0
margin_bottom = 14.0
text = "Identify the two aspects listed blow that are most important to you:"

[node name="Checkboxes" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 266.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_right = 998.0
margin_bottom = 24.0
text = "My girlfriend"

[node name="CheckBox2" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 28.0
margin_right = 998.0
margin_bottom = 52.0
text = "My boyfriend"

[node name="CheckBox3" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 56.0
margin_right = 998.0
margin_bottom = 80.0
text = "My partner"

[node name="CheckBox4" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 84.0
margin_right = 998.0
margin_bottom = 108.0
text = "Doing well in school"

[node name="CheckBox5" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 112.0
margin_right = 998.0
margin_bottom = 136.0
text = "Making cool art"

[node name="CheckBox6" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 140.0
margin_right = 998.0
margin_bottom = 164.0
text = "Sports"

[node name="CheckBox7" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 168.0
margin_right = 998.0
margin_bottom = 192.0
text = "Theater"

[node name="CheckBox8" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 196.0
margin_right = 998.0
margin_bottom = 220.0
text = "What other kids think of me"

[node name="CheckBox9" type="CheckBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/PersonalityQuestions/Checkboxes"]
margin_top = 224.0
margin_right = 998.0
margin_bottom = 248.0
text = "Friendships"

[node name="AnxietyQuestions" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 514.0
margin_right = 998.0
margin_bottom = 1240.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_right = 998.0
margin_bottom = 14.0
text = "How much anxiety or distress do you usually feel in the following situations? Please rate your anxiety or distress from 0 (none) to 8 (very much):"
autowrap = true

[node name="Question1" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 34.0
margin_right = 998.0
margin_bottom = 103.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1"]
margin_right = 998.0
margin_bottom = 14.0
text = "1. Being around a lot of kids in school "

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question1/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question2" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 123.0
margin_right = 998.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2"]
margin_right = 998.0
margin_bottom = 14.0
text = "2. Having one-on-one conversations with adults in school"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question2/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question3" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 212.0
margin_right = 998.0
margin_bottom = 281.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3"]
margin_right = 998.0
margin_bottom = 14.0
text = "3. Being around a lot of kids in school "

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question3/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question4" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 301.0
margin_right = 998.0
margin_bottom = 370.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4"]
margin_right = 998.0
margin_bottom = 14.0
text = "4. Saying the wrong thing to other kids"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question4/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question5" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 390.0
margin_right = 998.0
margin_bottom = 459.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5"]
margin_right = 998.0
margin_bottom = 14.0
text = "5. Getting picked on or made fun of by other kids"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question5/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question6" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 479.0
margin_right = 998.0
margin_bottom = 548.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6"]
margin_right = 998.0
margin_bottom = 14.0
text = "6. Being in crowded places"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question6/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question7" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 568.0
margin_right = 998.0
margin_bottom = 637.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7"]
margin_right = 998.0
margin_bottom = 14.0
text = "7. Getting a lot of attention from other kids"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question7/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="Question8" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions"]
margin_top = 657.0
margin_right = 998.0
margin_bottom = 726.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8"]
margin_right = 998.0
margin_bottom = 14.0
text = "8. Getting a lot of attention from teachers"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8"]
margin_top = 18.0
margin_right = 998.0
margin_bottom = 69.0

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8/VBoxContainer"]
margin_right = 998.0
margin_bottom = 16.0
max_value = 8.0
step = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8/VBoxContainer"]
margin_top = 20.0
margin_right = 998.0
margin_bottom = 51.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8/VBoxContainer/HBoxContainer"]
margin_right = 249.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "0
"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 499.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "2
"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8/VBoxContainer/HBoxContainer"]
margin_left = 499.0
margin_right = 748.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "6
"
align = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/AnxietyQuestions/Question8/VBoxContainer/HBoxContainer"]
margin_left = 748.0
margin_right = 998.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "8
"
align = 2

[node name="MoodQuestion" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 1290.0
margin_right = 998.0
margin_bottom = 1710.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/MoodQuestion"]
margin_right = 998.0
margin_bottom = 116.0
text = "Before we get started, you will need to learn how to understand the feelings thermometer, which is how you get points in the game. A feelings thermometer can help you identify your level of anxiety or distress in any given situation. A 0 usually indicates feeling really good or happy and a 10 is the absolute worst you could imagine feeling, indicating you would need help to stay safe. Usually, when your feeling thermometer gets to anything over a 5 this is a sign that it might help to use a coping skill. In real life, these numbers are different for different people. In the game, they are not real, but give you a chance to see how the thermometer could go up and down in any given situation.

Right now, in real life, how would you rate your feelings on the thermometer? (Click in the mood thermometer to set your mood)"
autowrap = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/MoodQuestion"]
margin_top = 120.0
margin_right = 998.0
margin_bottom = 420.0
texture = ExtResource( 5 )

[node name="Control" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/MoodQuestion/TextureRect" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_right = 996.0
margin_bottom = 0.0

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_left = 470.0
margin_top = 1760.0
margin_right = 527.0
margin_bottom = 1780.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Submit"
[connection signal="pressed" from="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
